[gd_scene load_steps=9 format=2]

[ext_resource path="res://ARIAL.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Person/Cenário/relatorio.png" type="Texture" id=2]
[ext_resource path="res://src/Minigames/PalavraCruzada.gd" type="Script" id=3]
[ext_resource path="res://assets/UI/Som.png" type="Texture" id=4]
[ext_resource path="res://src/HUD/Livro.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/UI/livro.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
extra_spacing_char = -16
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
extra_spacing_char = -17
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -63.0
margin_right = 2529.0
margin_bottom = 1190.0
color = Color( 0.705882, 0.498039, 0.356863, 1 )

[node name="Relatorio" type="Sprite" parent="."]
position = Vector2( 1286, 595 )
scale = Vector2( 0.998, 0.991667 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 857.0
margin_top = 298.0
margin_right = 1654.0
margin_bottom = 1102.0
input_pass_on_modal_close_click = false
color = Color( 1, 0.972549, 0.937255, 1 )

[node name="LineEdit00" type="LineEdit" parent="."]
margin_left = 1188.0
margin_top = 545.0
margin_right = 1246.0
margin_bottom = 603.0
custom_fonts/font = SubResource( 1 )
align = 1
expand_to_text_length = true
placeholder_alpha = 0.0

[node name="LineEdit01" type="LineEdit" parent="."]
margin_left = 1188.0
margin_top = 605.0
margin_right = 1246.0
margin_bottom = 663.0
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_alpha = 0.0

[node name="LineEdit02" type="LineEdit" parent="."]
margin_left = 1188.0
margin_top = 665.0
margin_right = 1246.0
margin_bottom = 723.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit03" type="LineEdit" parent="."]
margin_left = 1188.0
margin_top = 725.0
margin_right = 1246.0
margin_bottom = 783.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit04" type="LineEdit" parent="."]
margin_left = 1188.0
margin_top = 785.0
margin_right = 1246.0
margin_bottom = 843.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit05" type="LineEdit" parent="."]
margin_left = 1188.0
margin_top = 845.0
margin_right = 1246.0
margin_bottom = 903.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit06" type="LineEdit" parent="."]
margin_left = 1188.0
margin_top = 905.0
margin_right = 1246.0
margin_bottom = 963.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit07" type="LineEdit" parent="."]
margin_left = 1188.0
margin_top = 965.0
margin_right = 1246.0
margin_bottom = 1023.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit08" type="LineEdit" parent="."]
margin_left = 1188.0
margin_top = 1025.0
margin_right = 1246.0
margin_bottom = 1083.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit40" type="LineEdit" parent="."]
margin_left = 886.0
margin_top = 905.0
margin_right = 944.0
margin_bottom = 963.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit10" type="LineEdit" parent="."]
margin_left = 1008.0
margin_top = 605.0
margin_right = 1066.0
margin_bottom = 663.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit11" type="LineEdit" parent="."]
margin_left = 1068.0
margin_top = 605.0
margin_right = 1126.0
margin_bottom = 663.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit12" type="LineEdit" parent="."]
margin_left = 1128.0
margin_top = 605.0
margin_right = 1186.0
margin_bottom = 663.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit41" type="LineEdit" parent="."]
margin_left = 947.0
margin_top = 905.0
margin_right = 1005.0
margin_bottom = 963.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit14" type="LineEdit" parent="."]
margin_left = 1249.0
margin_top = 605.0
margin_right = 1307.0
margin_bottom = 663.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit15" type="LineEdit" parent="."]
margin_left = 1309.0
margin_top = 605.0
margin_right = 1367.0
margin_bottom = 663.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit16" type="LineEdit" parent="."]
margin_left = 1369.0
margin_top = 605.0
margin_right = 1427.0
margin_bottom = 663.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit17" type="LineEdit" parent="."]
margin_left = 1429.0
margin_top = 605.0
margin_right = 1487.0
margin_bottom = 663.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit18" type="LineEdit" parent="."]
margin_left = 1490.0
margin_top = 605.0
margin_right = 1548.0
margin_bottom = 663.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit19" type="LineEdit" parent="."]
margin_left = 1550.0
margin_top = 605.0
margin_right = 1608.0
margin_bottom = 663.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit20" type="LineEdit" parent="."]
margin_left = 1429.0
margin_top = 484.0
margin_right = 1487.0
margin_bottom = 542.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit21" type="LineEdit" parent="."]
margin_left = 1429.0
margin_top = 545.0
margin_right = 1487.0
margin_bottom = 603.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit42" type="LineEdit" parent="."]
margin_left = 1008.0
margin_top = 905.0
margin_right = 1066.0
margin_bottom = 963.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit23" type="LineEdit" parent="."]
margin_left = 1429.0
margin_top = 666.0
margin_right = 1487.0
margin_bottom = 724.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit24" type="LineEdit" parent="."]
margin_left = 1429.0
margin_top = 727.0
margin_right = 1487.0
margin_bottom = 785.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit25" type="LineEdit" parent="."]
margin_left = 1429.0
margin_top = 787.0
margin_right = 1487.0
margin_bottom = 845.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit26" type="LineEdit" parent="."]
margin_left = 1429.0
margin_top = 847.0
margin_right = 1487.0
margin_bottom = 905.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit27" type="LineEdit" parent="."]
margin_left = 1429.0
margin_top = 907.0
margin_right = 1487.0
margin_bottom = 965.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit28" type="LineEdit" parent="."]
margin_left = 1429.0
margin_top = 967.0
margin_right = 1487.0
margin_bottom = 1025.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit43" type="LineEdit" parent="."]
margin_left = 1068.0
margin_top = 905.0
margin_right = 1126.0
margin_bottom = 963.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit44" type="LineEdit" parent="."]
margin_left = 1128.0
margin_top = 905.0
margin_right = 1186.0
margin_bottom = 963.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit46" type="LineEdit" parent="."]
margin_left = 1249.0
margin_top = 905.0
margin_right = 1307.0
margin_bottom = 963.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="Label0" type="Label" parent="."]
margin_left = 1208.0
margin_top = 510.0
margin_right = 1216.0
margin_bottom = 524.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Label1" type="Label" parent="."]
margin_left = 974.0
margin_top = 624.0
margin_right = 982.0
margin_bottom = 638.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"

[node name="Label2" type="Label" parent="."]
margin_left = 1452.0
margin_top = 453.0
margin_right = 1460.0
margin_bottom = 467.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"

[node name="Label4" type="Label" parent="."]
margin_left = 857.0
margin_top = 926.0
margin_right = 865.0
margin_bottom = 940.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "4"

[node name="LineEdit30" type="LineEdit" parent="."]
margin_left = 946.0
margin_top = 785.0
margin_right = 1004.0
margin_bottom = 843.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit31" type="LineEdit" parent="."]
margin_left = 1007.0
margin_top = 785.0
margin_right = 1065.0
margin_bottom = 843.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit32" type="LineEdit" parent="."]
margin_left = 1068.0
margin_top = 785.0
margin_right = 1126.0
margin_bottom = 843.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit33" type="LineEdit" parent="."]
margin_left = 1128.0
margin_top = 785.0
margin_right = 1186.0
margin_bottom = 843.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit35" type="LineEdit" parent="."]
margin_left = 1248.0
margin_top = 785.0
margin_right = 1306.0
margin_bottom = 843.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="LineEdit36" type="LineEdit" parent="."]
margin_left = 1309.0
margin_top = 785.0
margin_right = 1367.0
margin_bottom = 843.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="Resultados" type="Label" parent="."]
margin_left = 877.0
margin_top = 476.0
margin_right = 1057.0
margin_bottom = 533.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Label3" type="Label" parent="."]
margin_left = 917.0
margin_top = 806.0
margin_right = 925.0
margin_bottom = 820.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 873.0
margin_top = 152.0
margin_right = 1385.0
margin_bottom = 362.0
rect_min_size = Vector2( 2, 0 )
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "0. A comunicação _______________ é oposta à comunicação assertiva, usando a linguagem de forma hostil e ameaçadora.

1. Uma característica importante na comunicação não agressiva é conseguir ouvir sem __________. 

2.Uma habilidade importante é a capacidade de lidar com ___________ de forma calma e respeitosa.

3. A expressão ________ facilita a compreenção dos pontos importantes de uma situação.

4. A chave para uma comunicação não agressiva é a _______. 
"

[node name="Verificar" type="Button" parent="."]
visible = false
margin_left = 1745.0
margin_top = 190.0
margin_right = 1869.0
margin_bottom = 253.0
rect_scale = Vector2( 2, 2 )
text = "Entregar"

[node name="HSlider" type="HSlider" parent="."]
visible = false
margin_left = 2235.0
margin_top = 120.0
margin_right = 2440.0
margin_bottom = 136.0
size_flags_horizontal = 15
size_flags_stretch_ratio = 0.0
min_value = -50.0
max_value = -4.0
value = -4.0

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 2297.0
margin_top = 16.0
margin_right = 2379.0
margin_bottom = 98.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="livro" type="TextureButton" parent="."]
margin_left = 2185.0
margin_top = 16.0
margin_right = 2270.0
margin_bottom = 101.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )

[node name="Node2D" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="Verificar" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="livro" to="." method="_on_livro_pressed"]
